--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,9 @@ services:
         working_dir: /var/www/html
         extra_hosts:
             - 'host.docker.internal:host-gateway'
-      
+        depends_on:
+            - db
+    db:
+        image: postgres:15-alpine
+        container_name: db
+        restart: always
