--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,6 +7,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Copy example env file
+        run: |
+          cp .env.example .env
       - name: Start Docker Compose
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
