--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,4 +18,4 @@ jobs:
             ./docker-compose.test.yml
       - name: Run Laravel Tests
         run: |
-          docker-compose exec app php artisan test
+          docker compose -f ./docker-compose.yml -f ./docker-compose.test.yml exec app php artisan test
