--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,6 +16,9 @@ jobs:
           compose-file: |
             ./docker-compose.yml
             ./docker-compose.test.yml
+      - name: Run composer install
+        run: |
+          docker compose -f ./docker-compose.yml -f ./docker-compose.test.yml exec app composer install
       - name: Run Laravel Tests
         run: |
           docker compose -f ./docker-compose.yml -f ./docker-compose.test.yml exec app php artisan test
