--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           docker compose -f ./docker-compose.yml -f ./docker-compose.test.yml exec app composer install
       - name: Generate key
+        run: |
           docker compose -f ./docker-compose.yml -f ./docker-compose.test.yml exec app php artisan key:generate
       - name: Run Laravel Tests
         run: |
